--- a/components/banner/banner.module.css
+++ b/components/banner/banner.module.css
@@ -3,7 +3,7 @@
     height: 100vh;
   }
   
-  .leftWrapper {
+  .wrapper {
     position: absolute;
     width: 100%;
     height: 100vh;
@@ -24,18 +24,18 @@
   .glassWrapper {
       padding: 4rem 1rem;
   }
-  .nseriesWrapper {
+  .brandNameWrapper {
     display: flex;
   }
   
-  .firstLetter {
+  .article {
     font-size: 3.75rem /* 60px */;
     line-height: 1;
     color: var(--red);
     font-weight: 800;
   }
   
-  .series {
+  .brandName {
     font-size: 1.5rem /* 14px */;
     line-height: 1.25rem /* 20px */;
     color: var(--green10);
@@ -192,7 +192,7 @@
   
   @media (min-width: 768px) {
     .left {
-      width: 90%;
+      width: 100%;
     }
   }
   
