--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,9 +79,9 @@ button {
   --black40: #141414;
   --black50: rgb(20, 20, 20);
 
-  --gray10: rgb(119, 119, 119);
-  --gray20: rgb(156, 163, 175);
-  --gray40: rgba(42, 42, 42, 0.6);
+  --grey10: rgb(119, 119, 119);
+  --grey20: rgb(156, 163, 175);
+  --grey40: rgba(42, 42, 42, 0.6);
 
   --white10: rgba(255, 255, 255, 1);
   --white20: rgba(243, 244, 246, 1);
