card: user-select none

--- a/components/banner/card/card.module.css
+++ b/components/banner/card/card.module.css
@@ -33,6 +33,9 @@
   .container {
     margin-right: 0.25rem /* 4px */;
     cursor: pointer;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
   }
   
   .cardImg {
