--- a/components/banner/card/card.module.css
+++ b/components/banner/card/card.module.css
@@ -51,4 +51,7 @@
     display: block;
   
     max-width: 100%;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
   }
