--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,6 +28,9 @@ a {
 
 * {
   box-sizing: border-box;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 p {
