cards BW filter

--- a/components/banner/card/section-cards.module.css
+++ b/components/banner/card/section-cards.module.css
@@ -1,4 +1,5 @@
 .container {
+    margin-top: 5rem;
     color: var(--blue20);
     background-color: --var(--black50);
     padding-left: 1rem /* 16px */;
