--- a/components/banner/card/card.module.css
+++ b/components/banner/card/card.module.css
@@ -40,7 +40,7 @@
     right: 0px;
     bottom: 0px;
     left: 0px;
-  
+    filter: grayscale(100%);
     border-radius: 0.375rem /* 6px */;
     object-fit: cover;
   
@@ -48,4 +48,9 @@
     display: block;
   
     max-width: 100%;
+  }
+
+  .cardImg:hover {
+    filter: grayscale(0%);
+    border-radius: 0.375rem /* 6px */;
   }
