--- a/pages/Login.module.css
+++ b/pages/Login.module.css
@@ -3,15 +3,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    height: 100vh;
+    width: 100%;
     background-color: var(--black);
     background-image: linear-gradient(rgb(0 0 0 / 60%), rgb(0 0 0 / 60%)),
       url(/BG6.jpg);
     background-size: cover;
     background-position: "50% 50%";
     position: absolute;
-    width: 100%;
-    height: 100%;
     bottom: 0px;
   }
   
