--- a/pages/Login.module.css
+++ b/pages/Login.module.css
@@ -68,6 +68,8 @@
     background-color: var(--black20);
     height: 60%;
     border-radius: 0.375rem /* 6px */;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
   }
   
   .signinHeader {
