--- a/components/loading/loading.module.css
+++ b/components/loading/loading.module.css
@@ -3,12 +3,14 @@
         align-items: center;
         background: #000;
         display: flex;
+        flex-direction: column;
         height: 100vh;
         padding: 0;
         margin: 0;
     }
   
   .container {
+    margin-top: 2rem;
     background: rgba(255,255,255,0.1);
     justify-content: flex-start;
     border-radius: 100px;
@@ -28,17 +30,31 @@
     height: 5px;
     width: 0;
   }
+
+  .logoWrapper {
+    padding-left: 0.9rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .theUglyCat {
+    animation: loadText 3s normal forwards;
+    font-size: 1.5rem;
+}  
   
   
   @keyframes load {
     0% {
       width: 0;
       background: #a28089;
+      
     }
     
     25% {
       width: 40%;
       background: #a0d2eb;
+      
     }
     
     50% {
@@ -78,3 +94,28 @@
       background: #494d5f;
     }
   }
+
+  @keyframes loadText {
+    0% {
+      color: #a28089;
+      
+    }
+    
+    25% {
+      color: #a0d2eb;
+      
+    }
+    
+    50% {
+      color: #ffa8b6;
+    }
+    
+    75% {
+      color: #d0bdf4;
+    }
+    
+    100% {
+      color: #494d5f;
+    }
+  }
+  
