--- a/components/loading/loading.module.css
+++ b/components/loading/loading.module.css
@@ -17,8 +17,8 @@
     position: relative;
     padding: 0 5px;
     display: flex;
-    height: 10px;
-    width: 100%;
+    height: 6px;
+    width: 90%;
   }
   
   .Loading {
@@ -26,7 +26,7 @@
     box-shadow: 0 10px 40px -10px #fff;
     border-radius: 100px;
     background: #fff;
-    height: 5px;
+    height: 3px;
     width: 0;
   }
 
@@ -40,6 +40,7 @@
   .theUglyCat {
     animation: loadText 3s normal forwards;
     font-size: 1rem;
+    margin-bottom: 0.5rem;
 }  
   
   
