--- a/components/loading/loading.module.css
+++ b/components/loading/loading.module.css
@@ -1,12 +1,14 @@
     .mainLoading {
+        padding: 0;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         background: #000;
-        display: flex;
-        flex-direction: column;
         height: 100vh;
-        padding: 0;
-        margin: 0;
+        width: 100%;
+        
     }
   
   .container {
