--- a/components/loading/loading.module.css
+++ b/components/loading/loading.module.css
@@ -33,16 +33,15 @@
   }
 
   .logoWrapper {
-    padding-left: 0.9rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
+    margin-bottom: 0.5rem;
   }
   .theUglyCat {
     animation: loadText 3s normal forwards;
     font-size: 1rem;
-    margin-bottom: 0.5rem;
 }  
   
   
