--- a/components/loading/loading.module.css
+++ b/components/loading/loading.module.css
@@ -6,9 +6,9 @@
         justify-content: center;
         align-items: center;
         background: #000;
-        height: 100vh;
+        height: 100dvh;
         width: 100%;
-        
+        overflow: hidden;
     }
   
   .container {
