--- a/styles/Video.module.css
+++ b/styles/Video.module.css
@@ -1,26 +1,25 @@
-
 .modal {
-  position: absolute;
-  /** centers modal **/
-  left: 0;
-  right: 0;
-  margin: 0 auto;
+    position: absolute;
+    /** centers modal **/
+    left: 5%;
+    right: 5%;
+    margin: 0 auto;
+    
+    bottom: 5px;
 
-  width: 80%;
-  bottom: 40px;
-  background-color: var(--black40);
-  top: 10%;
-
-  outline: none;
-  border-radius: 10px;
-  border: 1px solid var(--shadow10);
-}
+    background-color: var(--black40);
+    top: 5%;
+  
+    outline: none;
+    border-radius: 10px;
+    border: 1px solid var(--shadow10);
+  }
 
 .overlay {
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100dvh;
-}
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100vh;
+  }
