--- a/styles/Video.module.css
+++ b/styles/Video.module.css
@@ -21,3 +21,20 @@
     width: 100%;
     height: 200vh;
   }
+
+  .borderBoxShadow {
+    -webkit-box-shadow: 0 3px 7px var(--shadow20);
+    -moz-box-shadow: 0 3px 7px var(--shadow20);
+    box-shadow: 0 3px 7px var(--shadow20);
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding-box;
+    background-clip: padding-box;
+    opacity: 1;
+    background: linear-gradient(to top, var(--black10), transparent 50%);
+  }
+  
+  /** Makes video edges curvy **/
+  .videoPlayer {
+    border-radius: 10px 10px 0px 0px;
+    composes: borderBoxShadow;
+  }
