--- a/pages/Login.module.css
+++ b/pages/Login.module.css
@@ -6,15 +6,17 @@
     height: 100vh;
     width: 100%;
     background-color: var(--black);
-    background-image: linear-gradient(rgb(0 0 0 / 60%), rgb(0 0 0 / 60%)),
-      url(/BG6.jpg);
+    background-image: linear-gradient(rgb(0 0 0 / 60%), rgb(0 0 0 / 60%));
     background-size: cover;
     background-position: "50% 50%";
     position: absolute;
     bottom: 0px;
   }
   
-  
+  .imageBackground {
+    z-index:0;
+  }
+
   .header {
     display: flex;
     justify-content: space-between;
