--- a/pages/Login.module.css
+++ b/pages/Login.module.css
@@ -6,8 +6,7 @@
     height: 100vh;
     width: 100%;
     background-color: var(--black);
-    background-image: linear-gradient(rgb(0 0 0 / 60%), rgb(0 0 0 / 60%)),
-      url(/BG6.jpg);
+    background-image: linear-gradient(rgb(0 0 0 / 60%), rgb(0 0 0 / 60%));
     background-size: cover;
     background-position: "50% 50%";
     position: absolute;
@@ -172,6 +171,10 @@
   }
   
   @media (min-width: 768px) {
+    .container {
+      background-image: linear-gradient(rgb(0 0 0 / 60%), rgb(0 0 0 / 60%)),
+      url(/BG6.jpg);
+    }
     .headerWrapper {
       padding-left: 4rem /* 64px */;
       padding-right: 4rem /* 64px */;
